Fix navbar position sticky on Safari

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,10 +1,13 @@
 header {
+  position: -webkit-sticky; 
   position: sticky;
   top: 0;
   z-index: 1000;
   background-color: var(--bg-primary);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   padding: 1rem 2rem;
+  height: 72px;
+  width: 100%;
 }
 
 nav {
@@ -25,9 +28,9 @@ nav button {
   background: none;
   border: none;
   cursor: pointer;
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 0rem;
   font-weight: 500;
-  font-size: 1.3em;
+  font-size: clamp(0.5rem, 4vw, 1.5rem);
   transition: color 0.3s ease;
 }
 
